# Diligence-agent

./: README.md
diligence-agent/: README.md  pyproject.toml
diligence-agent/.claude/commands/: diligence.md  financial.md  legal.md  report.md  risk.md
diligence-agent/diligence_agent/: agent.py
diligence-agent/diligence_agent/prompts/: document_analyzer.txt  financial_analyst.txt  lead_agent.txt  legal_analyst.txt  report_writer.txt  risk_assessor.txt
