[project]
name = "ma-diligence-agent"
version = "0.1.0"
description = "M&A Due Diligence Agent - Multi-agent system for comprehensive transaction due diligence"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "python-dotenv>=1.0.0",
    "reportlab>=4.0.0",
    "matplotlib>=3.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["diligence_agent"]

[project.scripts]
diligence-agent = "diligence_agent.agent:main"
